k8s/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: retail-ingress
  namespace: ecomsense
  annotations:
    # Rewrite URL path to ensure correct routing
    #nginx.ingress.kubernetes.io/rewrite-target: /
    # Enable CORS if needed by frontend
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
spec:
  rules:
  - host: dashboard
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
      - path: /api/inventory
        pathType: Prefix
        backend:
          service:
            name: inventory-service
            port:
              number: 8083
      - path: /products
        pathType: Prefix
        backend:
          service:
            name: product-service
            port:
              number: 8082
      - path: /predict
        pathType: Prefix
        backend:
          service:
            name: inventory-service
            port:
              number: 8083
